--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>Icon.js</file>
+        <file>materialdesignicons-webfont.ttf</file>
+	<file>TimeFormatting.js</file>
     </qresource>
 </RCC>
